<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EcoParque</string>
    <string name="title_activity_seleccion_usuario">Selección de usuario</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empresa_radio">Empresa</string>
    <string name="ciudadano_radio">Ciudadano</string>
    <string name="title_activity_datos_empresa">Datos de la empresa</string>
    <string name="acceder">Acceder</string>
    <string name="iniciar">Iniciar depósito</string>
    <string name="intro_CIF">Introduce el CIF</string>
    <string name="intro_NIF">Introduce el NIF</string>
    <string name="usuario">Usuario</string>
    <string name="NIF">NIF</string>
    <string name="CIF">CIF</string>
    <string name="Llamar">Llamar</string>
    <string name="Enviar">Enviar</string>
    <string name="Abrir">Abrir</string>
    <string name="datos_Empresa">Datos de la empresa</string>
    <string name="nombre_Empresa">Nombre de la empresa</string>
    <string name="ejemplo_telf">123-12345678</string>
    <string name="ejemplo_email">email@empresa.com</string>
    <string name="ejemplo_url">http://empresa.com</string>
    <string name="title_activity_depositante">Material a depositar</string>
    <string name="depositante">Depositante:</string>
    <string name="aceites">Aceites usados</string>
    <string name="ordenadores">Ordenadores</string>
    <string name="neveras">Neveras</string>
    <string name="mat_informatico">Material informático</string>
    <string name="depositar">Depositar</string>
    <string name="peso_total">Peso total:</string>
    <string name="kg">Kg.</string>
    <string name="title_activity_resultados">Resultados del depósito</string>
    <string name="resultados">Resultados depósito</string>
    <string name="registrar_deposito">Registrar depósito</string>
    <string name="enviar_mail">Enviar por mail</string>
    <string name="siguiente">Siguiente</string>
    <string name="tipo_usuario">Tipo de usuario</string>
    <string name="coste">Coste</string>
    <string name="residuos">Residuos depositados</string>
    <string name="calculo">89Kg * 2,4€/Kg</string>
    <string name="iva">IVA 21%</string>
    <string name="total">Total</string>
    <string name="calculo_res">€ 2250</string>
    <string name="iva_res">€ 250</string>
    <string name="resultado">€ 2500</string>
    <string name="depositante_id">45664301D</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="ciudadano">Ciudadano</string>
    <string name="contraseña">Contraseña</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">¿Contraseña perdida?</string>
    <string name="login_progress_signing_in">Comprobando...…</string>
    <string name="error_invalid_email">El formato introducido es incorrecto</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Usuario o contraseña incorrectos</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="title_activity_datos_dominio">Datos del dominio</string>
    <string name="titulo_datos">URL: </string>
    <string name="coordenadas">Coordenadas: </string>
    <string name="localidad">Localidad: </string>
    <string name="pais">País: </string>
    <string name="ip">Dirección IP: </string>
    <string name="info_dominio">Ver información dominio</string>
    <string name="title_activity_seleccion_punto_limpio">Selección de punto limpio</string>
    <string name="desconectar">Desconectar</string>
    <string name="fecha_cobro">Fecha de cobro:</string>
    <string name="editar">Editar</string>
    <string name="txt_deposito">Depósito en Punto Limpio</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmacion">¿Estás seguro?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="ver_mapa">Ver en mapa</string>
    <string name="title_activity_mapa_dominio">MapaDominio</string>
    <string name="app_title">Eco Parque</string>

</resources>
