<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutPrincipal"
    tools:context=".DatosDominio$PlaceholderFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/titulo_datos"
            android:textSize="@dimen/contenido"
            android:layout_weight="0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/url_empresa"
            android:layout_weight="0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/contenido"
            android:maxLines="1"
            android:editable="false"
            android:singleLine="true" />
    </LinearLayout>


    <TextView
        android:id="@+id/ip"
        android:textSize="@dimen/contenido"
        android:text="@string/ip"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/pais"
        android:textSize="@dimen/contenido"
        android:text="@string/pais"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/localidad"
        android:textSize="@dimen/contenido"
        android:text="@string/localidad"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/coordenadas"
        android:textSize="@dimen/contenido"
        android:text="@string/coordenadas"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_mostrar_mapa"
        android:layout_width="fill_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:text="@string/ver_mapa" />

</LinearLayout>
