<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutPrincipal"
    tools:context=".DatosEmpresa$PlaceholderFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:textSize="19dp"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <TextView
                        style="@style/tituloSecundario"
                        android:text="@string/txt_deposito" />

                    <TextView
                        android:id="@+id/deposito_punto_limpio"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:textSize="@dimen/tit_secundario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/tituloSecundario"
                        android:layout_marginTop="18dp"
                        android:text="@string/depositante" />

                    <TextView
                        android:id="@+id/str_id_depositante"
                        android:text="@string/depositante_id"
                        android:textSize="@dimen/contenido"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/tituloSecundario"
                        android:id="@+id/cant_residuos"
                        android:text="@string/residuos"
                        android:layout_marginTop="18dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:textSize="19dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_height="fill_parent"
                        android:visibility="visible">

                        <TextView
                            style="@style/textoOcultoResultados"
                            android:id="@+id/mat_informatico"
                            android:text="@string/mat_informatico" />

                        <TextView
                            style="@style/textoOcultoResultados"
                            android:id="@+id/neveras"
                            android:text="@string/neveras" />

                        <TextView
                            style="@style/textoOcultoResultados"
                            android:id="@+id/aceites"
                            android:text="@string/aceites" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_coste"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="18dp"
                    android:textSize="19dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txt_coste"
                        android:text="@string/coste"
                        android:textStyle="bold"
                        android:textSize="@dimen/tit_secundario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:textSize="19dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="25dp"

                        android:layout_height="fill_parent">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_marginTop="10dp"
                            android:layout_height="fill_parent">

                            <TextView
                                android:id="@+id/txt_calculo"
                                android:text="@string/calculo"
                                android:textSize="18dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                style="@style/resultadosElementoDerecha"
                                android:id="@+id/precio_calculo"
                                android:text="@string/calculo_res" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_marginTop="10dp"
                            android:layout_height="fill_parent">

                            <TextView
                                android:id="@+id/IVA"
                                android:text="@string/iva"
                                android:textSize="18dp"
                                android:textAlignment="textStart"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />


                            <TextView
                                style="@style/resultadosElementoDerecha"
                                android:id="@+id/precio_iva"
                                android:text="@string/iva_res" />
                        </LinearLayout>

                        <View
                            android:id="@+id/View01"
                            android:layout_marginTop="5dp"
                            android:layout_width="fill_parent"
                            android:layout_height="1dip"
                            android:background="#2B497B" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_marginTop="5dp"
                            android:layout_height="fill_parent">

                            <TextView
                                android:id="@+id/total"
                                android:text="@string/total"
                                android:textSize="19dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                style="@style/resultadosElementoDerecha"
                                android:id="@+id/precio_total"
                                android:textStyle="bold"
                                android:text="@string/resultado"
                                android:textColor="#ff637f28" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_marginTop="15dp"
                        android:layout_height="fill_parent"
                        android:gravity="center_horizontal">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.7"
                            android:layout_height="wrap_content"

                            >

                            <TextView
                                android:text="@string/fecha_cobro"
                                android:textSize="19dp"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/fecha"
                                android:layout_weight="0.7"
                                android:textSize="19dp"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/editar_fecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:layout_gravity="bottom"
                            android:text="@string/editar" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                style="@style/LayoutInferiorBotones"
                android:orientation="horizontal">

                <Button
                    style="@style/botonEstrecho"
                    android:id="@+id/enviar_mail"
                    android:drawableLeft="@drawable/email"
                    android:text="@string/enviar_mail" />

                <Button
                    style="@style/botonEstrecho"
                    android:id="@+id/registrar_deposito"
                    android:text="@string/registrar_deposito" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>