<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutPrincipal"
    tools:context=".SeleccionUsuario$PlaceholderFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/radio_ciudadano">

                    <RadioButton
                        style="@style/radioButton"
                        android:id="@+id/radio_ciudadano"
                        android:text="@string/ciudadano_radio"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        style="@style/radioButton"
                        android:id="@+id/radio_empresa"
                        android:text="@string/empresa_radio"
                        android:onClick="onRadioButtonClicked" />
                </RadioGroup>

                <TextView
                    style="@style/textViewSeleccionUsuario"
                    android:id="@+id/text_CIF"
                    android:text="@string/intro_CIF"
                    android:visibility="gone" />

                <TextView
                    style="@style/textViewSeleccionUsuario"
                    android:id="@+id/text_NIF"
                    android:text="@string/intro_NIF"
                    android:visibility="visible" />


                <EditText
                    android:layout_marginTop="18dp"
                    android:textSize="@dimen/tit_secundario"
                    android:id="@+id/input_ident"
                    android:visibility="visible"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/NIF" />


            </LinearLayout>

            <LinearLayout
                style="@style/LayoutInferiorBotones"
                android:orientation="vertical">

                <Button
                    style="@style/botonInferior"
                    android:id="@+id/iniciar_deposito"
                    android:layout_marginTop="30dp"
                    android:text="@string/iniciar"
                    android:enabled="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
